--- a/TheAgarwalBlog/games/MRisk/mrisk.html
+++ b/TheAgarwalBlog/games/MRisk/mrisk.html
@@ -278,7 +278,8 @@
 							}
 							MAP.highlight(s => s.name === victim.name, true);
 							HUDObj.label = resolveAttack(zone, victim);
-							changePlayer();
+							MAP.highlight(s => true, false);
+							// changePlayer(); // We let a player make as many attacks as they want before passing
 							pressButton(btnCall); // Let player choose another action
 						}
 						pickZone(victimCallback); // Let player choose another zone for destination of attack
