--- a/TheAgarwalBlog/games/MRisk/mrisk-tests.html
+++ b/TheAgarwalBlog/games/MRisk/mrisk-tests.html
@@ -99,7 +99,7 @@
                 let z1 = new Zone("Troy", 0, 0, ["Rome"]);
                 let z2 = new Zone("Rome", 0, 0, ["Troy"]);
                 z1.Infantry = 2; z2.Infantry = 1;
-                z1.master = new Player("#f00", 2);
+                z1.master = new Player("#f00", 2, 0, 0);
                 let attackResult = resolveAttack(z1, z2);
                 if((z1.Infantry !== 2 || z1.Cavalry !== 0 || z1.Artillery !== 0)
                     || (z2.Infantry !== 1 || z2.Cavalry !== 0 || z2.Artillery !== 0)
@@ -113,8 +113,8 @@
                 let z1 = new Zone("Troy", 0, 0, ["Rome"]);
                 let z2 = new Zone("Rome", 0, 0, ["Troy"]);
                 z1.Infantry = 15; z2.Infantry = 1;
-                z1.master = new Player("#f00", 2);
-                z2.master = new Player("#0f0", 2);
+                z1.master = new Player("#f00", 2, 0, 0);
+                z2.master = new Player("#0f0", 2, 0, 0);
                 let attackResult = resolveAttack(z1, z2);
                 if((z1.Infantry !== 1 || z1.Cavalry !== 0 || z1.Artillery !== 0)
                     || (z2.Infantry !== 13 || z2.Cavalry !== 0 || z2.Artillery !== 0)
@@ -129,8 +129,8 @@
                 let z2 = new Zone("Rome", 0, 0, ["Troy"]);
                 z1.Infantry = 1; z1.Cavalry = 1; 
                 z2.Infantry = 1; 
-                z1.master = new Player("#f00", 2);
-                z2.master = new Player("#0f0", 2);
+                z1.master = new Player("#f00", 2, 0, 0);
+                z2.master = new Player("#0f0", 2, 0, 0);
                 let attackResult = resolveAttack(z1, z2);
                 if((z1.Infantry !== 1 || z1.Cavalry !== 0 || z1.Artillery !== 0)
                     || (z2.Infantry !== 0 || z2.Cavalry !== 1 || z2.Artillery !== 0)
@@ -146,8 +146,8 @@
                 let z2 = new Zone("Rome", 0, 0, ["Troy"]);
                 z1.Infantry = 0; z1.Cavalry = 2; 
                 z2.Infantry = 1; 
-                z1.master = new Player("#f00", 2);
-                z2.master = new Player("#0f0", 2);
+                z1.master = new Player("#f00", 2, 0, 0);
+                z2.master = new Player("#0f0", 2, 0, 0);
                 let attackResult = resolveAttack(z1, z2);
                 if((z1.Infantry !== 0 || z1.Cavalry !== 1 || z1.Artillery !== 0)
                     || (z2.Infantry !== 0 || z2.Cavalry !== 1 || z2.Artillery !== 0)
@@ -163,8 +163,8 @@
                 let z2 = new Zone("Rome", 0, 0, ["Troy"]);
                 z1.Infantry = 0; z1.Cavalry = 3; 
                 z2.Infantry = 2; 
-                z1.master = new Player("#f00", 2);
-                z2.master = new Player("#0f0", 2);
+                z1.master = new Player("#f00", 2, 0, 0);
+                z2.master = new Player("#0f0", 2, 0, 0);
                 let attackResult = resolveAttack(z1, z2);
                 if((z1.Infantry !== 0 || z1.Cavalry !== 1 || z1.Artillery !== 0)
                     || (z2.Infantry !== 0 || z2.Cavalry !== 1 || z2.Artillery !== 0)
@@ -180,8 +180,8 @@
                 let z2 = new Zone("Rome", 0, 0, ["Troy"]);
                 z1.Infantry = 0; z1.Cavalry = 30; 
                 z2.Cavalry = 2; 
-                z1.master = new Player("#f00", 2);
-                z2.master = new Player("#0f0", 2);
+                z1.master = new Player("#f00", 2, 0, 0);
+                z2.master = new Player("#0f0", 2, 0, 0);
                 let attackResult = resolveAttack(z1, z2);
                 if((z1.Infantry !== 0 || z1.Cavalry !== 1 || z1.Artillery !== 0)
                     || (z2.Infantry !== 0 || z2.Cavalry !== 27 || z2.Artillery !== 0)
@@ -199,8 +199,8 @@
                 let z2 = new Zone("Rome", 0, 0, ["Troy"]);
                 z1.Infantry = 1; z1.Artillery = 1; 
                 z2.Infantry = 1; 
-                z1.master = new Player("#f00", 2);
-                z2.master = new Player("#0f0", 2);
+                z1.master = new Player("#f00", 2, 0, 0);
+                z2.master = new Player("#0f0", 2, 0, 0);
                 let attackResult = resolveAttack(z1, z2);
                 if((z1.Infantry !== 1 || z1.Cavalry !== 0 || z1.Artillery !== 0)
                     || (z2.Infantry !== 0 || z2.Cavalry !== 0 || z2.Artillery !== 1)
@@ -216,8 +216,8 @@
                 let z2 = new Zone("Rome", 0, 0, ["Troy"]);
                 z1.Infantry = 0; z1.Artillery = 2; 
                 z2.Infantry = 1; 
-                z1.master = new Player("#f00", 2);
-                z2.master = new Player("#0f0", 2);
+                z1.master = new Player("#f00", 2, 0, 0);
+                z2.master = new Player("#0f0", 2, 0, 0);
                 let attackResult = resolveAttack(z1, z2);
                 if((z1.Infantry !== 0 || z1.Cavalry !== 0 || z1.Artillery !== 1)
                     || (z2.Infantry !== 0 || z2.Cavalry !== 0 || z2.Artillery !== 1)
@@ -233,8 +233,8 @@
                 let z2 = new Zone("Rome", 0, 0, ["Troy"]);
                 z1.Infantry = 1; z1.Artillery = 3; 
                 z2.Infantry = 2; 
-                z1.master = new Player("#f00", 2);
-                z2.master = new Player("#0f0", 2);
+                z1.master = new Player("#f00", 2, 0, 0);
+                z2.master = new Player("#0f0", 2, 0, 0);
                 let attackResult = resolveAttack(z1, z2);
                 if((z1.Infantry !== 1 || z1.Cavalry !== 0 || z1.Artillery !== 0)
                     || (z2.Infantry !== 0 || z2.Cavalry !== 0 || z2.Artillery !== 2)
@@ -250,8 +250,8 @@
                 let z2 = new Zone("Rome", 0, 0, ["Troy"]);
                 z1.Infantry = 0; z1.Cavalry = 2; z1.Artillery = 30; 
                 z2.Cavalry = 2; 
-                z1.master = new Player("#f00", 2);
-                z2.master = new Player("#0f0", 2);
+                z1.master = new Player("#f00", 2, 0, 0);
+                z2.master = new Player("#0f0", 2, 0, 0);
                 let attackResult = resolveAttack(z1, z2);
                 if((z1.Infantry !== 0 || z1.Cavalry !== 1 || z1.Artillery !== 0)
                     || (z2.Infantry !== 0 || z2.Cavalry !== 1 || z2.Artillery !== 29)
@@ -267,8 +267,8 @@
                 let z2 = new Zone("Rome", 0, 0, ["Troy"]);
                 z1.Infantry = 0; z1.Cavalry = 2; z1.Artillery = 0; 
                 z2.Infantry = 0; z2.Cavalry = 1; 
-                z1.master = new Player("#f00", 2);
-                z2.master = new Player("#0f0", 2);
+                z1.master = new Player("#f00", 2, 0, 0);
+                z2.master = new Player("#0f0", 2, 0, 0);
                 let attackResult = resolveAttack(z1, z2);
                 if((z1.Infantry !== 0 || z1.Cavalry !== 2 || z1.Artillery !== 0)
                     || (z2.Infantry !== 0 || z2.Cavalry !== 1 || z2.Artillery !== 0)
