Added rule in rules page

--- a/TheAgarwalBlog/games/MRisk/mrisk-rules.html
+++ b/TheAgarwalBlog/games/MRisk/mrisk-rules.html
@@ -61,6 +61,8 @@ The HUD on the right completes itself:
 ## Playing the Game
 
 After the Capital cities are selected, the player gets 3 actions, the main gameplay loop. 
+At the start of a player's turn, one half of the number of territories owned by that player
+is rouneded up and added to the player's gold pile.
 Each turn a player can choose exactly one type of action (Add or Attack), but as many times as they want.
 Once the player is done making as many Add actions, or Attack actions, they can click the "Pass" button to 
 pass the turn to the 2nd player. Here is a short description of the Actions:
