Fixed rules button layout issue for mac

--- a/TheAgarwalBlog/games/MRisk/mrisk.html
+++ b/TheAgarwalBlog/games/MRisk/mrisk.html
@@ -12,13 +12,13 @@
 	}
 	#rules-btn {
 		position: fixed;
-		top: 90%;
+		top: 80%;
 		left: 82.5%;
 		z-index: 10;
 	}
 	p {
 		position: fixed;
-		top: 83%;
+		top: 82.5%;
 		left: 82.5%;
 		z-index: 10;
 		color: #eee;
@@ -28,7 +28,7 @@
 <body oncontextmenu="return false">
 	<canvas id="canvas"></canvas>
 	<p>Left Click to Interact</p>
-	<p style="margin-top: 2%;">Hold & Drag Right Click to move the map</p>
+	<p style="margin-top: 40px;">Hold & Drag Right Click to move the map</p>
 	<a href="mrisk-rules.html"><input type="button" id="rules-btn" value="Rules" /></a>
 </body>
 
